<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="login_button_title">Login</string>
    <string name="sign_up_button_title">Sign up</string>
    <string name="create_account_text_">Create Account</string>
    <string name="to_get_started_now_text">to get started now!</string>
    <string name="login_input_edit_text_hint">Login</string>
    <string name="password_input_edit_text_hint">Password</string>
    <string name="confirm_password_input_edit_text_hint">Confirm Password</string>
    <string name="or_sign_up_with_text">Or Sign Up with</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="already_have_an_account_text">Already have an account?</string>
    <string name="login_now_text">Login Now</string>
    <string name="welcome_text">Welcome</string>
    <string name="glad_to_see_you_text">Glad to see you!</string>
    <string name="or_login_with_text">Or Login with</string>
    <string name="dont_have_an_account_text">Don\'t have an account</string>
    <string name="sign_up_now_text">Sign Up Now</string>
    <string name="account_for_mniami">Account For Mniami</string>
</resources>