<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/create_account_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_64"
            android:layout_marginTop="@dimen/dp_64"
            android:text="@string/create_account_text_"
            android:textAlignment="center"
            android:textSize="@dimen/sp_32"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/get_started_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_64"
            android:layout_marginTop="@dimen/dp_12"
            android:text="@string/to_get_started_now_text"
            android:textAlignment="center"
            android:textSize="@dimen/sp_32"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/create_account_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_32"
            android:layout_marginTop="@dimen/dp_32"
            android:hint="@string/login_input_edit_text_hint"
            app:endIconMode="clear_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/get_started_text"
            app:startIconDrawable="@drawable/ic_login"
            app:startIconTint="@color/md_theme_light_primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_32"
            android:layout_marginTop="@dimen/dp_16"
            android:hint="@string/password_input_edit_text_hint"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/md_theme_light_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/username_input_layout"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/md_theme_light_primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                tools:targetApi="cupcake" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/confirm_password_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/dp_32"
            android:layout_marginTop="@dimen/dp_16"
            android:hint="@string/confirm_password_input_edit_text_hint"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/md_theme_light_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/password_input_layout"
            app:startIconDrawable="@drawable/ic_lock"
            app:startIconTint="@color/md_theme_light_primary">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/confirm_password_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                tools:targetApi="cupcake" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registration_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:layout_marginHorizontal="@dimen/dp_32"
            android:layout_marginTop="@dimen/dp_32"
            android:text="@string/sign_up_button_title"
            android:textColor="@color/md_theme_light_onPrimary"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password_input_layout" />

        <View
            android:id="@+id/divider_left"
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/dp_32"
            android:layout_marginTop="@dimen/dp_32"
            android:layout_marginEnd="@dimen/dp_16"
            android:background="@color/md_theme_light_primary"
            app:layout_constraintBottom_toBottomOf="@+id/or_sign_up_with_text"
            app:layout_constraintEnd_toStartOf="@+id/or_sign_up_with_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registration_button"
            app:layout_constraintVertical_bias="0.444" />

        <TextView
            android:id="@+id/or_sign_up_with_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_32"
            android:text="@string/or_sign_up_with_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/registration_button" />

        <View
            android:id="@+id/divider_right"
            android:layout_width="120dp"
            android:layout_height="1dp"
            android:layout_marginStart="@dimen/dp_16"
            android:layout_marginTop="@dimen/dp_32"
            android:layout_marginEnd="@dimen/dp_32"
            android:background="@color/md_theme_light_primary"
            app:layout_constraintBottom_toBottomOf="@+id/or_sign_up_with_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/or_sign_up_with_text"
            app:layout_constraintTop_toBottomOf="@+id/registration_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/google_login_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:layout_marginHorizontal="@dimen/dp_32"
            android:layout_marginTop="@dimen/dp_32"
            android:backgroundTint="#FFFFFF"
            android:text="@string/sign_in_with_google"
            android:textColor="#000000"
            android:textSize="@dimen/sp_16"
            app:icon="@drawable/ic_google"
            app:iconGravity="start"
            app:iconTint="@android:color/transparent"
            app:iconTintMode="add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/or_sign_up_with_text"
            app:strokeColor="#000000"
            app:strokeWidth="1dp" />

        <TextView
            android:id="@+id/already_have_an_account_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/dp_32"
            android:text="@string/already_have_an_account_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.4"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/login_now_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dp_6"
            android:layout_marginBottom="@dimen/dp_32"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/login_now_text"
            android:textColor="@color/md_theme_light_primary"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/already_have_an_account_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>